# twitter

./: .gitignore  main.py  pyproject.toml
backend/db/: database.py
backend/models/: __init__.py  comments_model.py  emotions_model.py  follow_model.py  posts_model.py  users_model.py
backend/routers/: comments_api.py  emotions_api.py  posts_api.py  users_api.py
backend/routers/requests/: comments_req.py  emotions_req.py  follow_req.py  posts_req.py  user_req.py
backend/routers/responses/: comments_res.py  emotions_res.py  posts_res.py  users_res.py
backend/utils/: configs.py  constants.py  password_helper.py
tests/: base.py  test_users.py
